--- a/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/events-forms/events-forms.component.less
@@ -11,10 +11,11 @@
   justify-content: stretch;
 }
 
-.field-form-input {
-  text-align: center;
-}
-
-.field-form-input::placeholder {
-  color: #888;
-}
+//
+//.field-form-input {
+//  text-align: center;
+//}
+//
+//.field-form-input::placeholder {
+//  color: #888;
+//}
