--- a/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.less
+++ b/src/app/shared/scoreboards/admin-forms/time-forms/time-forms.component.less
@@ -49,6 +49,18 @@
   justify-content: stretch;
 }
 
+.max-minutes {
+  display: grid;
+  padding: 10px;
+  grid-gap: 10px;
+  grid-column: span 3;
+  //grid-template-columns: auto auto;
+  //grid-template-rows: auto;
+
+  align-content: center;
+  justify-content: stretch;
+}
+
 .play-time-form {
   //border: 1px solid #000000;
   box-shadow: 0px 0px 10px 0px #232323;
