--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -57,7 +57,7 @@ label {
   grid-template-columns: 50% 50%;
   grid-template-rows: auto;
   grid-gap: 10px;
-  justify-content: stretch;
+  justify-items: stretch;
   align-items: center;
   //padding: 10px;
 }
