events enum to select from list

--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -13,8 +13,8 @@ label {
   padding: 10px;
   border-radius: 5px;
   display: grid;
-  margin-bottom: 5px;
-  margin-top: 5px;
+  //margin-bottom: 5px;
+  //margin-top: 5px;
 }
 
 .event-table-cell {
@@ -23,6 +23,7 @@ label {
   grid-gap: 10px;
   justify-content: stretch;
   align-items: center;
+  //padding: -5px;
   padding-top: 5px;
   padding-bottom: 5px;
 }
@@ -47,7 +48,7 @@ label {
   grid-template-columns: 50px 40% 40%;
   grid-template-rows: auto;
   grid-gap: 10px;
-  justify-content: stretch;
+  justify-content: center;
   align-items: center;
   //padding: 10px;
 }
