--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.less
@@ -13,8 +13,8 @@ label {
   padding: 10px;
   border-radius: 5px;
   display: grid;
-  //margin-bottom: 5px;
-  //margin-top: 5px;
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 .event-table-cell {
